kubernetes/kanban/service.yml
apiVersion: v1
kind: Service
metadata:
  name: kanboard
  namespace: default
spec:
  type: ClusterIP
  selector:
    name: kanboard
  ports:
  - port: 80
