kubernetes/kanban/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kanboard
  namespace: default
  annotations:
    traefik.ingress.kubernetes.io/redirect-entry-point: https
spec:
  rules:
  - host: kanban.in.$MAIN_DOMAIN
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: kanboard
            port:
              number: 80
